   * Optimize list view "Replace all" - thx Jamakmake
   * Improve mouse wheel scrolling in waveform when locked/centered
   * Update/clean nuget packages
   * Allow large angles in ASSA styles window - thx yiwenchi
   * Remove shortcut action limit for duration a few places - thx Leon
   * Update Tesseract 5 alpha 2021-08-11 to RC1 2021-10-30
* FIXED:
   * Fix tag style converting from/to ASSA - thx von Suppé
   * Fix "Title bar text" when translating - thx Andrebavila
   * Fix culture name for French translation - thx jpsdr
   * Fix waveform multiple select error - thx darbor87
   * Fix issue with "Merge short lines" in "batch convert" - thx fhtdtdj
   * Fix waveform multiple select crash - thx darbor87
   * Fix broken "Duplicate line" shortcut - thx Kelvets/OmrSi
   * Fix crash in reading .ismt - thx DarkHorse-APP2
   * Fix for PAC italic w missing space - thx Milenko
   * Fix switched total labels in RTL mode w original subtitle - thx OmrSi
   * Rollback max #lines enforce (now hidden setting) - thx pandalamp 
   * Include favorite formats in "reset"
   * Take first audio track when loading wave form - thx Tuan-P
   * Fix issue with waveform original out of sync - thx Leon
   * Fix "Set start and set end of prev" when playing - thx Leon
   * Fix "Set end minus gap, go to next and start next here" - thx Leon
   * Fix for mpc-hc not showing video
   * Add timeout for main win regex search - thx darksen/Janusz 
   * Fix crash in "Batch convert - Auto balance"
   * Fix for recent files after convert format - thx Jamakmake
   * Fix for Blu-ray .sup noisy transparent border in VLC - thx shaino


3.6.2 (24th August 2021)
* NEW:
   * ASSA: Keep override tags (no conversion to html for italic/font etc.)
   * ASSA: Support for ScalingX/ScalingY/Spacing/Angle/Strikeout - thx ausencia
   * ASSA: Override tag helper (shortcut + custom templates)
   * ASSA: Set/get position
   * ASSA: Progress bar generator
   * ASSA: Plugin support
   * Allow custom shortcuts for plugins