@@ -125,7 +125,9 @@ Email: mailto:nikse.dk@gmail.com</AboutText1>
     <GenerateWaveformData>Generate waveform data</GenerateWaveformData>
     <PleaseWait>This may take a few minutes - please wait</PleaseWait>
     <VlcMediaPlayerNotFoundTitle>VLC media player not found</VlcMediaPlayerNotFoundTitle>
-    <VlcMediaPlayerNotFound>Subtitle Edit needs VLC media player 1.1.x or newer for extracting audio data.</VlcMediaPlayerNotFound>
+    <VlcMediaPlayerNotFound>Subtitle Edit needs FFmpeg for extracting audio data to generate waveform.
+
+Do you want to download and use FFmpeg?</VlcMediaPlayerNotFound>
     <GoToVlcMediaPlayerHomePage>Do you want to go to the VLC media player home page?</GoToVlcMediaPlayerHomePage>
     <GeneratingPeakFile>Generating peak file...</GeneratingPeakFile>
     <GeneratingSpectrogram>Generating spectrogram...</GeneratingSpectrogram>
